--- a/main.css
+++ b/main.css
@@ -1,6 +1,8 @@
-body, h1, p{
+body, h1, p, ul, li, a{
     margin: 0;
     padding: 0;
+    text-decoration: none;
+    list-style-type: none;
     font-family:'나눔고딕';
 }
 h1,p{
@@ -14,7 +16,9 @@ p{
     font-weight: bold;
     font-size: 20px;
 }
-
+a{
+    color: white;
+}
 .nav{
     display:grid;
     grid-template-columns: 150px 1fr 1fr 1fr 1fr;
@@ -22,23 +26,39 @@ p{
     line-height:10vh;
     background-color: #222222;
 }
+.nav::after{
+    width: 100%;
+    height: 90vh;
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+}
 .logoimg{
     display: block; margin: 0px auto;
     height: 10vh;
 }
 .navli{
     border-left: 1px solid white;
-    color: white;
-    text-decoration: none;
     font-size: 25px;
     font-weight: bold;
 }
 .navli:hover{
-    font-size:27.5px;
-    background-image: url("charPreview_Venti.png");
+    font-size:30px;
     background-size: auto 75px;
     background-repeat:no-repeat;
     background-position: right;
+}
+.li_cha:hover{
+    background-image: url("charPreview_Venti.png");
+}
+.li_inf:hover{
+    background-image: url("icon_mora.png");
+    background-size: auto 100px;
+}
+.li_genshin:hover{
+    background-image: url("icon_Adventurers.png");
 }
 .main {
     width: 100%;
