--- a/CSS/main.css
+++ b/CSS/main.css
@@ -51,14 +51,14 @@ ul.nav > li:hover > div.main_menu{
     background-position: right;
 }
 ul.nav > li.menu_c:hover > div.menu3{
-    background-image: url("charPreview_Venti.png");
+    background-image: url("../Image/charPreview_Venti.png");
 }
 ul.nav > li.menu_d:hover > div.menu4{
-    background-image: url("icon_mora.png");
+    background-image: url("../Image/icon_mora.png");
     background-size: auto 100px;
 }
 ul.nav > li.menu_e:hover > div.menu5{
-    background-image: url("icon_Adventurers.png");
+    background-image: url("../Image/icon_Adventurers.png");
 }
 
 /*드롭다운 출력*/
@@ -82,7 +82,7 @@ ul.nav > li ul.sub_menu > li:hover { background:#222222; }
     width: 100%;
     height: 100vh;
     content: "";
-    background: url("Genshin mainpage.jpg");
+    background: url("../Image/Genshin\ mainpage.jpg");
     background-repeat:no-repeat;
     background-size:  100% 90vh;
     position: absolute;
