--- a/CSS/main.css
+++ b/CSS/main.css
@@ -35,12 +35,20 @@ a{
     grid-template-columns: 150px 1fr 1fr 1fr 1fr;
     text-align: center;
     line-height:10vh;
+    opacity: 0.9;
 }
 .main_menu{
     border-left: 1px solid white;
     font-size: 25px;
     font-weight: bold;
     background-color: #222222;
+}
+.sub_menu{
+    position:absolute;
+    width:calc( 25% - 37.5px );
+    z-index: 2;
+    color: white;
+    background-color: rgb(50, 50, 50);
 }
 
 /*상단 메뉴바 아이콘 출력*/
@@ -77,7 +85,6 @@ ul.nav > li ul.sub_menu > li:hover { background:#222222; }
     width: 100%;
     height: 100vh;
     text-align: center;
-    position: relative;
     z-index: 1;
     line-height:2
 }
@@ -88,7 +95,7 @@ ul.nav > li ul.sub_menu > li:hover { background:#222222; }
     content: "";
     background: url("../Image/Genshin\ mainpage.jpg");
     background-repeat:no-repeat;
-    background-size:  100% 90vh;
+    background-size:  100% 100vh;
     position: absolute;
     top: 0;
     left: 0;
@@ -96,9 +103,22 @@ ul.nav > li ul.sub_menu > li:hover { background:#222222; }
     opacity: 0.8;
   }
 
+/*HOME*/
 .main_writing{
     position:absolute;
+    width: 80%;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+}
+
+/*Character*/
+.character_icon{
+    display: grid;
+    grid-template-columns: repeat(10, 1fr);
+    justify-items: center;
+}
+.c_icon{
+    width:100px;
+    height: 100px;
 }
