--- a/CSS/main.css
+++ b/CSS/main.css
@@ -7,7 +7,7 @@ body, h1, p, ul, li, a{
     font-family:'나눔고딕';
 }
 body{
-    overflow: hidden;
+
 }
 h1,p{
     text-shadow: 2px 8px 6px rgba(0,0,0,0.2), 0px -3px 20px rgba(255,255,255);
@@ -83,7 +83,7 @@ ul.nav > li ul.sub_menu > li:hover { background:#222222; }
 /*메인페이지 설정*/
 .main {
     width: 100%;
-    height: 100vh;
+    height: 90vh;
     text-align: center;
     z-index: 1;
     line-height:2
@@ -115,7 +115,7 @@ ul.nav > li ul.sub_menu > li:hover { background:#222222; }
 /*Character*/
 .character_icon{
     display: grid;
-    grid-template-columns: repeat(10, 1fr);
+    grid-template-columns: repeat(auto-fill, minmax(10%, auto));
     justify-items: center;
 }
 .c_icon{
