--- a/CSS/main.css
+++ b/CSS/main.css
@@ -92,15 +92,20 @@ ul.nav > li ul.sub_menu > li:hover { background:#222222; }
     width: 100%;
     height: 100vh;
     content: "";
-    background: url("../Image/Genshin\ mainpage.jpg");
-    background-repeat:no-repeat;
-    background-size:  100% 100vh;
     position: absolute;
     top: 0;
     left: 0;
     z-index: -1;
     opacity: 0.8;
-  }
+}
+
+.home::after{
+    background: url("../Image/Genshin\ mainpage.jpg");
+    background-repeat:no-repeat;
+    background-size:  100% 100vh;
+}
+
+
 
 /*HOME*/
 .main_writing{
